# python-wishlist

./: .env.example  Dockerfile  README.md  pyproject.toml
app/: main.py
app/core/: admin_configuration.py  auth_validation.py  config.py  database.py  logging_config.py  models.py  redis.py  security.py  seeder.py
app/middleware/: current_user.py  current_user_middleware.py
app/models/: __init__.py  customer.py  user.py  wishlist_item.py
app/routers/: auth.py  customer_router.py  wishlist_router.py
app/schemas/: auth.py  customer.py  wishlist.py
app/services/: AuthService.py  customer_service.py  product_service.py  wishlist_service.py
migrations/: env.py
migrations/versions/: c73064b51906_fix_product_id_type.py
tests/: first_test.py
